--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,10 @@ nav a {
   display: inline-block;
   margin: 1em;
 }
-
+#cart {
+  display: inline-block;
+  margin: left;
+}
 form div {
   margin: 1em;
   display: inline-block;
@@ -22,4 +25,8 @@ form div {
 img {
   width: 250px;
   height: 200px;
+}
+.cartImage {
+  width: 40px;
+  height: 40px;
 }
