--- a/public/style.css
+++ b/public/style.css
@@ -22,10 +22,17 @@ form div {
   margin: 1em;
   display: inline-block;
 }
-img {
-  width: 250px;
-  height: 200px;
+
+#logo {
+  width: 100px;
+  height: 50px;
 }
+
+img {
+  width: 200px;
+  height: 150px;
+}
+
 .cartImage {
   width: 40px;
   height: 40px;
