--- a/public/style.css
+++ b/public/style.css
@@ -35,6 +35,10 @@ form div {
   width: 450px;
   height: 250px;
 }
+#welcomeIMG {
+  width: auto;
+  height: auto;
+}
 #allBanner {
   width: 800px;
   height: 250px;
